# AlcheCode

./: .codespellignore  .env.example  .gitignore  LICENSE  README.md  api.py  cli.py  pyproject.toml  rules.example.txt
.github/workflows/: integration-tests.yml  unit-tests.yml
src/alchecode/: __init__.py  __main__.py  app.py  cli.py  cmd.py  flask.py
src/alchecode/nodes/: __init__.py  analyzer.py  execute_tools.py  format_output.py  initial.py  load_rules.py
src/alchecode/tools/: __init__.py  base.py  json_format.py  password_generator.py  registry.py
src/config/: __init__.py  config.py  enums.py  output.py  prompts.py  state.py
src/utils/: __init__.py  json_parser.py  logger.py
tests/integration_tests/: test_app.py
tests/unit_tests/: test_initial_node.py  test_json_parser.py
